--- a/tests/Bundles/data/Forum/024.html
+++ b/tests/Bundles/data/Forum/024.html
@@ -3,5 +3,5 @@
 <iframe width="612" height="710" src="//instagram.com/p/gbGaIXBQbn/embed/" allowfullscreen="" frameborder="0" scrolling="no"></iframe><br>
 <iframe width="640" height="360" src="http://www.liveleak.com/ll_embed?i=3dd_1366238099" allowfullscreen="" frameborder="0" scrolling="no"></iframe><br>
 <iframe width="560" height="315" src="//player.vimeo.com/video/67207222" allowfullscreen="" frameborder="0" scrolling="no"></iframe><br>
-<iframe width="480" height="480" src="https://vine.co/v/bYwPIluIipH/embed/simple" allowfullscreen="" frameborder="0" scrolling="no"></iframe><script async="" src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script><br>
+<iframe width="480" height="480" src="https://vine.co/v/bYwPIluIipH/embed/simple?audio=1" allowfullscreen="" frameborder="0" scrolling="no"></iframe><br>
 <iframe width="560" height="315" allowfullscreen="" frameborder="0" scrolling="no" src="//www.youtube.com/embed/-cEzsCAzTak"></iframe>
