MediaEmbed: overhauled responsive embeds
The responsive wrapper has been updated and responsive embeds are always enabled now

--- a/tests/Bundles/data/MediaPack/001.html
+++ b/tests/Bundles/data/MediaPack/001.html
@@ -1,1 +1,1 @@
-<iframe width="100%" height="150" src="//audioboom.com/boos/2493448/embed/v3" style="max-width:700px" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+<iframe data-s9e-mediaembed="audioboom" allowfullscreen="" scrolling="no" src="//audioboom.com/boos/2493448/embed/v3" style="border:0;height:150px;max-width:700px;width:100%"></iframe>
