--- a/tests/Bundles/data/MediaPack/000.html
+++ b/tests/Bundles/data/MediaPack/000.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" allowfullscreen="" frameborder="0" scrolling="no" src="//www.youtube.com/embed/y6Sxv-sUYtM"></iframe>
+<div data-s9e-mediaembed="youtube" style="display:inline-block;width:100%;max-width:640px"><div style="position:relative;padding-bottom:56.25%"><iframe allowfullscreen="" scrolling="no" style="border:0;height:100%;position:absolute;width:100%" src="//www.youtube.com/embed/y6Sxv-sUYtM"></iframe></div></div>
