--- a/tests/Bundles/data/Fatdown/007.html
+++ b/tests/Bundles/data/Fatdown/007.html
@@ -1,3 +1,3 @@
-<blockquote><pre><code class="">¯\_(ツ)_/¯</code></pre></blockquote>
+<blockquote><pre><code>¯\_(ツ)_/¯</code></pre></blockquote>
 
 <p>sup</p>
