Forum bundle: added support for emoji

--- a/tests/Bundles/data/Forum/021.html
+++ b/tests/Bundles/data/Forum/021.html
@@ -1,19 +1,23 @@
-<img src="/path/to/img/smile.png" alt=":)"><br>
-<img src="/path/to/img/smile.png" alt=":-)"><br>
-<img src="/path/to/img/wink.png" alt=";)"><br>
-<img src="/path/to/img/wink.png" alt=";-)"><br>
-<img src="/path/to/img/grin.png" alt=":D"><br>
-<img src="/path/to/img/grin.png" alt=":-D"><br>
-<img src="/path/to/img/frown.png" alt=":("><br>
-<img src="/path/to/img/frown.png" alt=":-("><br>
-<img src="/path/to/img/kiss.png" alt=":-*"><br>
-<img src="/path/to/img/razz.png" alt=":P"><br>
-<img src="/path/to/img/razz.png" alt=":-P"><br>
-<img src="/path/to/img/razz.png" alt=":p"><br>
-<img src="/path/to/img/razz.png" alt=":-p"><br>
-<img src="/path/to/img/confused.png" alt=":?"><br>
-<img src="/path/to/img/confused.png" alt=":-?"><br>
-<img src="/path/to/img/neutral.png" alt=":|"><br>
-<img src="/path/to/img/neutral.png" alt=":-|"><br>
-<img src="/path/to/img/shock.png" alt=":o"><br>
-<img src="/path/to/img/laugh.png" alt=":lol:">
+<img alt=":)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f642.png"><br>
+<img alt=":-)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f642.png"><br>
+<img alt=";)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f609.png"><br>
+<img alt=";-)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f609.png"><br>
+<img alt=":D" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f600.png"><br>
+<img alt=":-D" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f600.png"><br>
+<img alt=":(" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/2639.png"><br>
+<img alt=":-(" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/2639.png"><br>
+<img alt=":-*" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f618.png"><br>
+<img alt=":P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
+<img alt=":-P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
+<img alt=":p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
+<img alt=":-p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
+<img alt=";P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
+<img alt=";-P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
+<img alt=";p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
+<img alt=";-p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
+<img alt=":?" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f615.png"><br>
+<img alt=":-?" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f615.png"><br>
+<img alt=":|" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f610.png"><br>
+<img alt=":-|" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f610.png"><br>
+<img alt=":o" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f62e.png"><br>
+<img alt=":lol:" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f602.png">
