Emoji: removed set configuration and hardcoded default template

--- a/tests/Bundles/data/Forum/021.html
+++ b/tests/Bundles/data/Forum/021.html
@@ -1,23 +1,23 @@
-<img alt=":)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f642.png"><br>
-<img alt=":-)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f642.png"><br>
-<img alt=";)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f609.png"><br>
-<img alt=";-)" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f609.png"><br>
-<img alt=":D" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f600.png"><br>
-<img alt=":-D" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f600.png"><br>
-<img alt=":(" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/2639.png"><br>
-<img alt=":-(" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/2639.png"><br>
-<img alt=":-*" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f618.png"><br>
-<img alt=":P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
-<img alt=":-P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
-<img alt=":p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
-<img alt=":-p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61b.png"><br>
-<img alt=";P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
-<img alt=";-P" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
-<img alt=";p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
-<img alt=";-p" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f61c.png"><br>
-<img alt=":?" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f615.png"><br>
-<img alt=":-?" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f615.png"><br>
-<img alt=":|" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f610.png"><br>
-<img alt=":-|" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f610.png"><br>
-<img alt=":o" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f62e.png"><br>
-<img alt=":lol:" class="emoji" draggable="false" width="16" height="16" src="//cdn.jsdelivr.net/emojione/assets/png/1f602.png">
+<img alt=":)" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f642.svg"><br>
+<img alt=":-)" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f642.svg"><br>
+<img alt=";)" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f609.svg"><br>
+<img alt=";-)" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f609.svg"><br>
+<img alt=":D" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f600.svg"><br>
+<img alt=":-D" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f600.svg"><br>
+<img alt=":(" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/2639.svg"><br>
+<img alt=":-(" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/2639.svg"><br>
+<img alt=":-*" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f618.svg"><br>
+<img alt=":P" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61b.svg"><br>
+<img alt=":-P" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61b.svg"><br>
+<img alt=":p" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61b.svg"><br>
+<img alt=":-p" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61b.svg"><br>
+<img alt=";P" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61c.svg"><br>
+<img alt=";-P" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61c.svg"><br>
+<img alt=";p" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61c.svg"><br>
+<img alt=";-p" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f61c.svg"><br>
+<img alt=":?" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f615.svg"><br>
+<img alt=":-?" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f615.svg"><br>
+<img alt=":|" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f610.svg"><br>
+<img alt=":-|" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f610.svg"><br>
+<img alt=":o" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f62e.svg"><br>
+<img alt=":lol:" class="emoji" draggable="false" src="//cdn.jsdelivr.net/emojione/assets/svg/1f602.svg">
