--- a/tests/Bundles/data/Forum/016.html
+++ b/tests/Bundles/data/Forum/016.html
@@ -1,3 +1,3 @@
-<pre><code>echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" data-hljs-url="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.10/build/" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.1/loader.min.js"></script>
+<pre><code>echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" data-hljs-url="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.10/build/" integrity="sha384-fiUfbVu5WfS+y/0EiW3QpI0iZScy4ET77WKz9f0dGwHGgLNQz6pQa8AdSi8Y59ZZ" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.1/loader.min.js"></script>
 
 Text
