BBCodes: updated [code] BBCode

--- a/tests/Bundles/data/Forum/017.html
+++ b/tests/Bundles/data/Forum/017.html
@@ -1,5 +1,5 @@
-<pre><code>echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" data-hljs-url="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.10/build/" integrity="sha384-fiUfbVu5WfS+y/0EiW3QpI0iZScy4ET77WKz9f0dGwHGgLNQz6pQa8AdSi8Y59ZZ" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.1/loader.min.js"></script>
+<pre><code>echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-fiUfbVu5WfS+y/0EiW3QpI0iZScy4ET77WKz9f0dGwHGgLNQz6pQa8AdSi8Y59ZZ" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.1/loader.min.js"></script>
 
 Text<br>
 
-<pre><code class="language-php">echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" data-hljs-url="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.10/build/" integrity="sha384-fiUfbVu5WfS+y/0EiW3QpI0iZScy4ET77WKz9f0dGwHGgLNQz6pQa8AdSi8Y59ZZ" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.1/loader.min.js"></script>
+<pre><code class="language-php">echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-fiUfbVu5WfS+y/0EiW3QpI0iZScy4ET77WKz9f0dGwHGgLNQz6pQa8AdSi8Y59ZZ" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.1/loader.min.js"></script>
