--- a/tests/Bundles/data/Forum/017.html
+++ b/tests/Bundles/data/Forum/017.html
@@ -1,5 +1,5 @@
-<pre><code>echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-PG1zopchh98J/8eUG/5ESEA+dE1Art6Ym1XKxLljmoOwlodOfUguCC/cydPWZSQ/" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.8/loader.min.js"></script>
+<pre><code>echo 'Hello world';</code><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-PG1zopchh98J/8eUG/5ESEA+dE1Art6Ym1XKxLljmoOwlodOfUguCC/cydPWZSQ/" onload="hljsLoader.highlightBlocks(this.parentNode)" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.8/loader.min.js"></script></pre>
 
 Text<br>
 
-<pre><code class="language-php">echo 'Hello world';</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-PG1zopchh98J/8eUG/5ESEA+dE1Art6Ym1XKxLljmoOwlodOfUguCC/cydPWZSQ/" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.8/loader.min.js"></script>
+<pre><code class="language-php">echo 'Hello world';</code><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-PG1zopchh98J/8eUG/5ESEA+dE1Art6Ym1XKxLljmoOwlodOfUguCC/cydPWZSQ/" onload="hljsLoader.highlightBlocks(this.parentNode)" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.8/loader.min.js"></script></pre>
