--- a/tests/Bundles/data/Forum/026.html
+++ b/tests/Bundles/data/Forum/026.html
@@ -1,3 +1,3 @@
 <pre><code>line 1
 line 2
-</code></pre><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-PG1zopchh98J/8eUG/5ESEA+dE1Art6Ym1XKxLljmoOwlodOfUguCC/cydPWZSQ/" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.8/loader.min.js"></script>
+</code><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-PG1zopchh98J/8eUG/5ESEA+dE1Art6Ym1XKxLljmoOwlodOfUguCC/cydPWZSQ/" onload="hljsLoader.highlightBlocks(this.parentNode)" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.8/loader.min.js"></script></pre>
