Change code highlighting theme from `github-gist` to `github`.
`github-gist` was removed in HLJS 11.

--- a/tests/Bundles/data/Forum/016.html
+++ b/tests/Bundles/data/Forum/016.html
@@ -1,3 +1,3 @@
-<pre><code>echo 'Hello world';</code><script async="" crossorigin="anonymous" data-hljs-style="github-gist" integrity="sha384-ApZEJ0Xp885xfW2XkSo/ExMDLktFehU+dHjw7BJHxQCFf1PBDYVkMo8qZSO5lqoa" onload="hljsLoader.highlightBlocks(this.parentNode)" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.22/loader.min.js"></script></pre>
+<pre><code>echo 'Hello world';</code><script async="" crossorigin="anonymous" data-hljs-style="github" integrity="sha384-ApZEJ0Xp885xfW2XkSo/ExMDLktFehU+dHjw7BJHxQCFf1PBDYVkMo8qZSO5lqoa" onload="hljsLoader.highlightBlocks(this.parentNode)" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.22/loader.min.js"></script></pre>
 
 Text
