--- a/tests/Bundles/data/Forum/026.html
+++ b/tests/Bundles/data/Forum/026.html
@@ -1,3 +1,3 @@
 <pre><code>line 1
 line 2
-</code><script async="" crossorigin="anonymous" data-hljs-style="github" integrity="sha384-rZ0ejZvSNKZ+8zPSIZ+HNyQ342JWo975f3niYoUApz9n/1/kQRwO8zS/BooFCO41" onload="hljsLoader.highlightBlocks(this.parentNode)" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.30/loader.min.js"></script></pre>
+</code><script async="" crossorigin="anonymous" data-hljs-style="github" integrity="sha384-rZ0ejZvSNKZ+8zPSIZ+HNyQ342JWo975f3niYoUApz9n/1/kQRwO8zS/BooFCO41" src="https://cdn.jsdelivr.net/gh/s9e/hljs-loader@1.0.30/loader.min.js"></script></pre>
