Emoji: replaced the default assets URL

--- a/tests/Bundles/data/Forum/021.html
+++ b/tests/Bundles/data/Forum/021.html
@@ -1,23 +1,23 @@
-<img alt=":)" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f642.svg"><br>
-<img alt=":-)" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f642.svg"><br>
-<img alt=";)" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f609.svg"><br>
-<img alt=";-)" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f609.svg"><br>
-<img alt=":D" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f600.svg"><br>
-<img alt=":-D" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f600.svg"><br>
-<img alt=":(" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/2639.svg"><br>
-<img alt=":-(" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/2639.svg"><br>
-<img alt=":-*" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f618.svg"><br>
-<img alt=":P" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61b.svg"><br>
-<img alt=":-P" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61b.svg"><br>
-<img alt=":p" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61b.svg"><br>
-<img alt=":-p" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61b.svg"><br>
-<img alt=";P" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61c.svg"><br>
-<img alt=";-P" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61c.svg"><br>
-<img alt=";p" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61c.svg"><br>
-<img alt=";-p" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f61c.svg"><br>
-<img alt=":?" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f615.svg"><br>
-<img alt=":-?" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f615.svg"><br>
-<img alt=":|" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f610.svg"><br>
-<img alt=":-|" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f610.svg"><br>
-<img alt=":o" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f62e.svg"><br>
-<img alt=":lol:" class="emoji" draggable="false" src="https://twemoji.maxcdn.com/v/latest/svg/1f602.svg">
+<img alt=":)" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f642.svg"><br>
+<img alt=":-)" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f642.svg"><br>
+<img alt=";)" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f609.svg"><br>
+<img alt=";-)" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f609.svg"><br>
+<img alt=":D" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f600.svg"><br>
+<img alt=":-D" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f600.svg"><br>
+<img alt=":(" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/2639.svg"><br>
+<img alt=":-(" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/2639.svg"><br>
+<img alt=":-*" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f618.svg"><br>
+<img alt=":P" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61b.svg"><br>
+<img alt=":-P" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61b.svg"><br>
+<img alt=":p" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61b.svg"><br>
+<img alt=":-p" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61b.svg"><br>
+<img alt=";P" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61c.svg"><br>
+<img alt=";-P" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61c.svg"><br>
+<img alt=";p" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61c.svg"><br>
+<img alt=";-p" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f61c.svg"><br>
+<img alt=":?" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f615.svg"><br>
+<img alt=":-?" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f615.svg"><br>
+<img alt=":|" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f610.svg"><br>
+<img alt=":-|" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f610.svg"><br>
+<img alt=":o" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f62e.svg"><br>
+<img alt=":lol:" class="emoji" draggable="false" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f602.svg">
